--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@ body{
 }
 
 .App {
-  background-color: rgb(59, 59, 59);
-  color: white;
+  background-color: rgb(253, 253, 253);
+  color: rgb(112, 112, 112);
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  font-family: Tahoma, sans-serif;
 }
 
 h2 {
@@ -31,7 +32,6 @@ h2 {
 }
 
 .table {
-  width: 100%;
   display: grid;
   padding-top: 15px;
   margin-top: 0;
@@ -60,4 +60,21 @@ h2 {
 .box-selected {
   background-color: rgb(128, 202, 98);
   border: solid rgb(18, 75, 7)
+}
+
+button {
+  border: 2px solid rgb(112, 112, 112);
+  margin: 0 5px;
+  height: 6vh;
+  font-size: 2vh;
+  border-radius: 5px;
+  background-color: white;
+  color: rgb(112, 112, 112);
+  transition-duration: 0.4s;
+  outline: none
+}
+
+button:hover {
+  color: white;
+  background-color: rgb(112, 112, 112);
 }
