--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ button:hover {
   background-color: rgb(112, 112, 112);
 }
 
-.footer {
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
